# foodgram-project

./: .dockerignore  .env.example  .gitignore  LICENSE  Makefile  README.md
backend/: Dockerfile  dev-requirements.txt  manage.py  pyproject.toml  requirements.txt  schema.yml
backend/api/: fields.py  filters.py  permissions.py  renderers.py  serializers.py  urls.py  views.py
backend/foodgram/: Dockerfile  settings.py
backend/foodgram/api/: filters.py  permissions.py  serializers.py  urls.py  views.py
backend/foodgram/api/urls/: __init__.py
backend/foodgram/foodgram/: settings.py
backend/foodgram/recipes/: admin.py  models.py
backend/foodgram/recipes/management/commands/: load_data.py
backend/foodgram/recipes/migrations/: 0001_initial.py  0002_alter_cart_owner_alter_cart_recipe_and_more.py  0002_alter_subscribe_user.py  0003_recipe_favorite_count.py  0004_alter_tag_color_alter_tag_name_alter_tag_slug.py  0004_remove_cart_unique_cart_recipe_and_more.py  0005_recipe_in_shopping_cart_count.py  0006_alter_ingredient_options_and_more.py  0007_recipe_is_favorited_recipe_is_in_shopping_cart.py  0008_subscribe_unique_subscribe_and_more.py  0009_alter_favorite_owner_favorite_unique_favorite_recipe.py  0010_alter_ingredientinrecipe_amount_and_more.py
backend/foodgram/users/: admin.py
backend/foodgram/users/migrations/: 0001_initial.py
backend/recipes/: admin.py  models.py
backend/recipes/management/commands/: load_data.py
backend/recipes/migrations/: 0003_alter_tag_color.py  0005_remove_recipe_favorite_count_and_more.py
backend/tests/: utils.py
backend/tests/test_api/: conftest.py  factories.py  test_recipe.py  test_tag.py
backend/users/: admin.py  models.py
frontend/: package-lock.json
infra/: Dockerfile  docker-compose.production.yml  docker-compose.yml  nginx.conf
